--- a/index.html
+++ b/index.html
@@ -1633,7 +1633,7 @@
     </div>
 
     <script>
-      alert("E que tal essa deixar-te na web por toda eternidade?! Antes de continuares, lembra-te que tu és a melhor!!!!!")
+      alert("E que tal essa, deixar-te na web por toda eternidade?! Antes de continuares, lembra-te que tu és a melhor!!!!!")
       function bloomFlower() {
         
           if (document.body.classList.contains('not-loaded')) {
